Home, create, and profile fragments created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">the-commoners-guinness</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_create">Create</string>
+    <string name="title_profile">Profile</string>
 
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
     <string name="back4app_app_id">AsyBxuhEK0w8xAcDzFc6CvnyDgO6dwrp7VH2TSeo</string>
